# llm-portfolio

./: .env.example  .gitignore  01_competitive_intelligence_analyzer.ipynb  04_synthetic_data_generator.ipynb  05_python_to_cpp_porting.ipynb  06_fridge_is_right.ipynb  06_wine_vfm.ipynb  07_wine_vfm_qlora_colab.ipynb  07_wine_vfm_qlora_kaggle.ipynb  LICENSE  README.md  car_rental_assistant.ipynb  competitive_intelligence_analyzer.ipynb  multi_agent_chat.ipynb  pyproject.toml
helpers/: system_info.py
utils/: batch.py  deep_neural_network.py  evaluator.py  items.py  loaders.py  parser.py  preprocessor.py  vfm.py
