[project]
name = "llm-portfolio"
version = "0.1.0"
description = "A portfolio showcasing LLM engineering skills through practical projects including competitive intelligence analysis, multi-agent systems, RAG applications, and autonomous AI solutions built with Ollama, OpenAI, and modern LLM techniques."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "selenium>=4.15.2",
    "webdriver-manager>=4.0.1",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "gradio>=5.47.2,<6.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
